--- a/index.html
+++ b/index.html
@@ -30,6 +30,8 @@
             overscroll-behavior: none;
             padding: 0;
             margin: 0;
+            width: 100vw;
+            height: 100vh;
             overflow: hidden;
             font-family: Arial, Helvetica, sans-serif;
             -webkit-touch-callout: none; /* iOS Safari */
@@ -44,8 +46,9 @@
 
         .tabs {
             z-index: 1;
+            position: fixed;
+            bottom: 0;
             width: 100vw;
-            height: 100vh;
             display: flex;
             align-items: flex-end;
             overflow: hidden;
