--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
             --dialog-fade-time: 0.15s ease-in-out;
             --tab-transition-time: 0.15s ease-in-out;
             --color-black: #101010;
+            --color-grey: #E0E0E0;
             --color-super-black: #000;
         }
 
@@ -33,6 +34,7 @@
             width: 100vw;
             height: 100vh;
             overflow: hidden;
+            background: var(--color-grey);
             font-family: Arial, Helvetica, sans-serif;
             -webkit-touch-callout: none; /* iOS Safari */
             -webkit-user-select: none; /* Safari */
@@ -106,18 +108,24 @@
             overflow-x: hidden;
             overflow-y: scroll;
             -webkit-overflow-scrolling: touch;
-            background: #FFF;
             width: 100vw;
             height: 100%;
             color: var(--color-black);
         }
 
         .contents > section > div {
-            box-shadow: inset 0 0 10px #DDD;
+            margin: 16px;
+            border-radius: 5px;
+            background: #FFF;
+            box-shadow: 0 0 3px 3px #CDCDCD;
             height: auto;
             width: auto;
             display: block;
             padding: 10px;
+        }
+
+        body > a {
+            display: none;
         }
 
         h1, p {
@@ -144,6 +152,10 @@
             transform: scale(0.9);
             opacity: 0;
             transition: transform var(--dialog-fade-time), opacity var(--dialog-fade-time), visibility var(--dialog-fade-time);
+        }
+
+        input[id="dialog1"] {
+            display: none;
         }
 
         input[id="dialog1"]:checked ~ section.dialog {
