--- a/index.html
+++ b/index.html
@@ -32,7 +32,8 @@
             padding: 0;
             margin: 0;
             width: 100vw;
-            height: 100vh;
+            min-height: 100vh;
+            min-height: -webkit-fill-available;
             overflow: hidden;
             background: var(--color-grey);
             font-family: Arial, Helvetica, sans-serif;
@@ -82,7 +83,7 @@
             display: flex;
             position: absolute;
             width: auto;
-            height: calc(100vh - var(--tab-bar-height));
+            height: calc(100% - var(--tab-bar-height));
             transition: transform var(--tab-transition-time);
             will-change: transform;
             transform: translateZ(0);
@@ -143,7 +144,8 @@
             left: 0;
             top: 0;
             width: 100vw;
-            height: 100vh;
+            min-height: 100vh;
+            min-height: -webkit-fill-available;
             visibility: hidden;
         }
 
@@ -181,7 +183,8 @@
             opacity: 0;
             background: var(--color-black);
             width: 100vw;
-            height: 100vh;
+            min-height: 100vh;
+            min-height: -webkit-fill-available;
             z-index: 10;
             transition: opacity 0.2s;
         }
