--- a/index.html
+++ b/index.html
@@ -6,6 +6,13 @@
     <link rel="manifest" href="/manifest.webmanifest">
     <style>
 
+        *, *::after, *::before {
+            -webkit-user-select: none;
+            -webkit-user-drag: none;
+            -webkit-app-region: no-drag;
+            cursor: default;
+        }
+
         a, button, input, label {
             outline: 0 !important;
 	        -webkit-tap-highlight-color: transparent;
