--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
 
         section.dialog {
             z-index: 3;
-            position: absolute;
+            position: fixed;
             left: 0;
             top: 0;
             width: 100vw;
