--- a/index.html
+++ b/index.html
@@ -10,6 +10,13 @@
             -webkit-user-select: none;
             -webkit-user-drag: none;
             -webkit-app-region: no-drag;
+            -webkit-touch-callout: none; /* iOS Safari */
+            -webkit-user-select: none; /* Safari */
+            -khtml-user-select: none; /* Konqueror HTML */
+            -moz-user-select: none; /* Old versions of Firefox */
+            -ms-user-select: none; /* Internet Explorer/Edge */
+            user-select: none; /* Non-prefixed version, currently
+                                    supported by Chrome, Opera and Firefox */
             cursor: default;
         }
 
@@ -44,14 +51,6 @@
             overflow: hidden;
             background: var(--color-grey);
             font-family: Arial, Helvetica, sans-serif;
-            -webkit-touch-callout: none; /* iOS Safari */
-            -webkit-user-select: none; /* Safari */
-            -khtml-user-select: none; /* Konqueror HTML */
-            -moz-user-select: none; /* Old versions of Firefox */
-            -ms-user-select: none; /* Internet Explorer/Edge */
-            user-select: none; /* Non-prefixed version, currently
-                                    supported by Chrome, Opera and Firefox */
-
         }
 
         .tabs {
@@ -89,7 +88,7 @@
             z-index: 1;
             display: flex;
             position: absolute;
-            width: auto;
+            width: 300vw;
             height: calc(100% - var(--tab-bar-height));
             transition: transform var(--tab-transition-time);
             will-change: transform;
