--- a/index.html
+++ b/index.html
@@ -119,6 +119,8 @@
             width: 100vw;
             height: 100%;
             color: var(--color-black);
+            will-change: transform;
+            transform: translateZ(0);
         }
 
         .contents > section > div {
