--- a/index.html
+++ b/index.html
@@ -54,7 +54,6 @@
         }
 
         .layer {
-            will-change: transform;
             transform: translate3d(0, 0, 0);
         }
 
@@ -241,8 +240,8 @@
     <a id="tab3"></a>
 
     <!-- Tab contents. -->
-    <section class="contents layer">
-        <section>
+    <section class="contents">
+        <section class="layer">
             <div>
                 <h1>1.</h1>
                 <p>
@@ -257,7 +256,7 @@
                 </p>
             </div>
         </section>
-        <section>
+        <section class="layer">
             <div>
                 <h1>2.</h1>
                 <p>
@@ -271,7 +270,7 @@
                 </p>
             </div>
         </section>
-        <section>
+        <section class="layer">
             <div>
                 <h1>3.</h1>
                 <p>
