--- a/index.html
+++ b/index.html
@@ -43,6 +43,8 @@
 
         body {
             overscroll-behavior: none;
+            -webkit-backface-visibility: hidden;
+            backface-visibility: hidden;
             padding: 0;
             margin: 0;
             width: 100vw;
