--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
             overflow: hidden;
             background: var(--color-grey);
             font-family: Arial, Helvetica, sans-serif;
+            transform: translate3d(0, 0, 0);
         }
 
         .layer {
